Router v6's isActive property explored

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,10 +18,17 @@
     "jest": true
   },
   "rules": {
-    "import/prefer-default-export": 0,
-    "react/prefer-stateless-function": 0,
-    "import/no-named-as-default-member": 0,
-    " import/no-named-as-default": 0,
+    // "react/jsx-no-undef": 0,
+    // "react-hooks/exhaustive-deps": 0,
+    "no-shadow": 0,
+    "object-shorthand": 0,
+    "no-sequences": 0,
+    "react/jsx-no-constructed-context-values": 0,
+    "react/no-unescaped-entities": 0,
+    "no-plusplus": 0,
+    "prefer-const": 0,
+    "arrow-body-style": 0,
+    "import/no-named-as-default": 0,
     "react/react-in-jsx-scope": 0,
     "react-hooks/rules-of-hooks": "error",
     "no-console": 0,
